fix sidemenu appearance on small screens

--- a/angular-ui/src/app/components/side-menu/side-menu.component.scss
+++ b/angular-ui/src/app/components/side-menu/side-menu.component.scss
@@ -9,6 +9,13 @@
   box-shadow: 2px 1px 4px 4px rgba(65, 65, 65, 0.616);
 
   height: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.sidemenuContainer {
+  height: 100%;
+  overflow-y: auto;
 }
 
 .sidemenu {
@@ -39,18 +46,9 @@
     overflow-y: auto;
     margin-bottom: 20px;
     padding-right: 5px;
-  }
-  .restaurant-list-container::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  .restaurant-list-container::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-  }
-  .restaurant-list-container::-webkit-scrollbar-thumb {
-    background-color: #757575;
-    border-radius: 10px;
+
+    height: 100%;
+    min-height: 120px;
   }
 }
 
@@ -79,4 +77,17 @@
     transform: scale(1.02);
     filter: invert(1);
   }
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+*::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #757575;
+  border-radius: 10px;
 }
